# WebServer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  server.dump  standard.Makefile
.github/workflows/: build-test.yml
base/: error_reporter.cpp  error_reporter.hpp  logger.cpp  logger.hpp  media_type.cpp  media_type.hpp  string.hpp  strings.cpp  strings.hpp
cgi/: manager.cpp  manager.hpp  script.hpp
connection/: connection.cpp  connection.hpp  memory_connection.cpp  memory_userdata.hpp  openssl.cpp  security_internals.hpp
docs/: ATTACKS.md  BUILD_DEBIAN.md  BUILD_FREEBSD.md  CONFORMANCE.md
http/: client.cpp  client.hpp  client_error.cpp  client_error.hpp  configuration.hpp  request.hpp  server.cpp  server.hpp  server_launch_error.cpp  server_launch_error.hpp  utils.hpp
io/: file.cpp  file.hpp  file_resolver.cpp  file_resolver.hpp
posix/: fcntl.hpp  stat.hpp  unistd.hpp
security/: policies.hpp  process.cpp  process.hpp  tls_configuration.cpp  tls_configuration.hpp
test/: Makefile
test/http/: CMakeLists.txt  client.cpp  main.cpp  policies.cpp  server.cpp  utils.cpp
tools/: AutoSetupLetsEncrypt.sh  CreateDummyTextFile.sh
